add: adicionando imagem + css interno

--- a/index.html
+++ b/index.html
@@ -7,12 +7,26 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
+    <style>
+        body {
+            color: darkolivegreen;
+            height: 90vh; 
+            font-family: 'Lexend', 
+            sans-serif; 
+            background-color: rgb(184, 224, 184); 
+            display: flex; flex-direction: column; 
+            justify-content: center; 
+            align-items: center;
+        }
+    </style>
 </head>
-<body style="height: 90vh; font-family: 'Lexend', sans-serif; background-color: rgb(184, 224, 184); display: flex; flex-direction: column; justify-content: center; align-items: center;">
-    <figure></figure>
+<body>
+    <figure>
+        <img src="./images/giphy.webp" alt="">
+    </figure>
     <main>
-        <h1 style="color: darkolivegreen;">Alô :)</h1>
+        <h1 >Alô :)</h1>
     </main>
-    <footer style="color: darkolivegreen;">Desculpa se fugi do conteúdo básico. Quis manter simples, mas um pouco mais amigável.</footer>
+    <footer>´Você já tomou água hoje? 💧</footer>
 </body>
 </html>
